src-tauri/src/core/cli/tui/tests/snapshots/todo_panel_single_phase.snap
---
source: src/core/cli/tui/tests/snapshot.rs
expression: render_snapshot(buf)
---
| 👋 gpt-5-mini  effort medium  ctx 0K/128K fallback    ◉ [working]              |
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|                                                                                |
|                                                                                |
| plan it                                                                        |
|                                                                                |
|✓ Todos · 2/4   /todo                                                           |
| ☑ scaffold the crate                                                           |
| ☐ wire the routes                                                              |
| ☐ write the docs                                                               |
| ☒ support windows xp                                                           |
|────────────────────────────────────────────────────────────────────────────────|
|working… (Esc to cancel, type to steer the agent)                               |
|                                                                                |
|📂 /snapshot/repo       Esc/Ctrl-C cancel   PgUp/PgDn scroll   Ctrl-O expand all|

 0 0..2 fg=Yellow
 0 3..14 mod=BOLD
 0 14..29 fg=#E5C07B
 0 55..57 fg=#56B6C2
 0 57..66 fg=#56B6C2 mod=BOLD
 5 0..1 fg=LightMagenta bg=#282C3A mod=BOLD
 5 1..8 fg=#E9ECF2 bg=#282C3A mod=BOLD
 5 8..9 bg=#282C3A
 7 0..2 fg=#56B6C2
 7 2..7 fg=#56B6C2 mod=BOLD
 7 7..13 mod=DIM
 7 13..21 fg=#808080
 8 1..21 mod=DIM | CROSSED_OUT
 9 1..18 fg=#56B6C2
10 1..17 mod=DIM
11 1..21 fg=Red mod=CROSSED_OUT
13 0..49 mod=DIM | ITALIC
15 0..1 fg=#808080
15 2..17 fg=#808080
15 24..34 fg=#56B6C2 mod=BOLD
15 34..41 mod=DIM
15 44..53 fg=#56B6C2 mod=BOLD
15 53..60 mod=DIM
15 63..69 fg=#56B6C2 mod=BOLD
15 69..80 mod=DIM
