src-tauri/src/core/cli/tui/tests/snapshots/todo_panel_split_with_agents.snap
---
source: src/core/cli/tui/tests/snapshot.rs
expression: render_snapshot(buf)
---
| 👋 gpt-5-mini  effort medium  ctx 0K/128K fallback    ◉ [working]                                  |
|────────────────────────────────────────────────────────────────────────────────────────────────────|
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|› build it                                                                                          |
|                                                                                                    |
|                                                                                                    |
|✓ Todos · 1/2 · backend 1/3   /todo              │ ≡ 1 agent                                        |
| ☑ scaffold                                      │ • api-review  6t · 6r · 9% ctx · 75% cached      |
| ☐ routes                                        │    review the file                               |
| ☐ auth                                          │    Read mod_5.rs                                 |
|────────────────────────────────────────────────────────────────────────────────────────────────────|
|>   working…       (Esc to cancel, type to steer the agent)                                         |
|                                                                                                    |
|📂 /snapshot/repo                           Esc/Ctrl-C cancel   PgUp/PgDn scroll   Ctrl-O expand all|

 0 0..2 fg=Yellow
 0 3..14 mod=BOLD
 0 14..29 fg=#E5C07B
 0 55..57 fg=#56B6C2
 0 57..66 fg=#56B6C2 mod=BOLD
 6 0..100 bg=#282C3A
 7 0..2 fg=#56B6C2 bg=#282C3A mod=BOLD
 7 2..10 fg=#E9ECF2 bg=#282C3A mod=BOLD
 7 10..100 bg=#282C3A
 8 0..100 bg=#282C3A
10 0..2 fg=#56B6C2
10 2..7 fg=#56B6C2 mod=BOLD
10 7..13 fg=#56B6C2
10 13..27 mod=DIM
10 27..35 fg=#808080
10 48..51 fg=#808080
10 51..53 fg=#56B6C2
10 53..60 fg=#56B6C2 mod=BOLD
11 1..11 mod=DIM | CROSSED_OUT
11 48..51 fg=#808080
11 51..53 fg=#56B6C2
11 53..63 fg=#56B6C2 mod=BOLD
11 65..94 fg=#808080
12 1..9 fg=#56B6C2
12 48..51 fg=#808080
12 54..69 mod=DIM | ITALIC
13 1..7 mod=DIM
13 48..51 fg=#808080
13 54..67 fg=#808080
15 0..2 fg=#56B6C2 mod=BOLD
15 2..3 mod=REVERSED
15 4..12 mod=DIM | ITALIC
15 18..59 mod=DIM | ITALIC
17 0..1 fg=#808080
17 2..17 fg=#808080
17 44..54 fg=#56B6C2 mod=BOLD
17 54..61 mod=DIM
17 64..73 fg=#56B6C2 mod=BOLD
17 73..80 mod=DIM
17 83..89 fg=#56B6C2 mod=BOLD
17 89..100 mod=DIM
