src-tauri/src/core/cli/tui/tests/snapshots/transcript_background_notices.snap
---
source: src/core/cli/tui/tests/snapshot.rs
expression: render_snapshot(buf)
---
|                                                                                |
|› watch the build                                                               |
|                                                                                |
|                                                                                |
|◔ Monitor mon-1: 'build' matched                                                |
|⚠ Monitor mon-2: 'boot' timed out                                               |
|⚠ Background command failed after 3s: make test                                 |
|                                                                                |
|• Background command finished after 12s: make build                             |

 0 0..80 bg=#282C3A
 1 0..2 fg=#56B6C2 bg=#282C3A mod=BOLD
 1 2..17 fg=#E9ECF2 bg=#282C3A mod=BOLD
 1 17..80 bg=#282C3A
 2 0..80 bg=#282C3A
 4 0..2 fg=#56B6C2
 5 0..33 fg=#E5C07B
 6 0..47 fg=#E5C07B
 8 0..2 fg=#98C379 mod=BOLD
 8 2..12 mod=BOLD
