src-tauri/src/core/cli/tui/tests/snapshots/transcript_closed_tool_group.snap
---
source: src/core/cli/tui/tests/snapshot.rs
expression: render_snapshot(buf)
---
| where is the parser?                                                           |
|                                                                                |
|│ ✓ Read 2 files; ran 1 search, 1 file search                                   |

 0 0..1 fg=LightMagenta bg=#282C3A mod=BOLD
 0 1..21 fg=#E9ECF2 bg=#282C3A mod=BOLD
 0 21..22 bg=#282C3A
 2 0..2 fg=DarkGray
 2 2..4 fg=Green
 2 4..45 mod=DIM
