src-tauri/src/core/cli/tui/tests/snapshots/transcript_error_and_warning_notes.snap
---
source: src/core/cli/tui/tests/snapshot.rs
assertion_line: 162
expression: render_snapshot(buf)
---
|• model switched to gpt-5-mini                                                  |
|⚠ press Ctrl-C or Ctrl-D again to quit                                          |
|                                                                                |
|                                                                                |
|› summarize the log                                                             |
|                                                                                |
|                                                                                |
|■ error: 502 Bad Gateway from the provider                                      |

 0 0..2 fg=LightBlue
 0 2..30 mod=DIM
 1 0..38 fg=#E5C07B
 3 0..80 bg=#282C3A
 4 0..2 fg=#56B6C2 bg=#282C3A mod=BOLD
 4 2..19 fg=#E9ECF2 bg=#282C3A mod=BOLD
 4 19..80 bg=#282C3A
 5 0..80 bg=#282C3A
 7 0..42 fg=Red mod=BOLD
