src-tauri/src/core/cli/tui/tests/snapshots/transcript_failed_shell_command.snap
---
source: src/core/cli/tui/tests/snapshot.rs
expression: render_snapshot(buf)
---
|                                                                                |
|› check the build                                                               |
|                                                                                |
|                                                                                |
|• Ran cd src-tauri                                                              |
|  cargo check                                                                   |
|  cargo clippy                                                                  |
|  cargo test (exit 101)                                                         |

 0 0..80 bg=#282C3A
 1 0..2 fg=#56B6C2 bg=#282C3A mod=BOLD
 1 2..17 fg=#E9ECF2 bg=#282C3A mod=BOLD
 1 17..80 bg=#282C3A
 2 0..80 bg=#282C3A
 4 0..2 fg=Red mod=BOLD
 4 2..5 mod=BOLD
