src-tauri/src/core/cli/tui/tests/snapshots/transcript_failed_tool_call.snap
---
source: src/core/cli/tui/tests/snapshot.rs
assertion_line: 162
expression: render_snapshot(buf)
---
| open the notes                                                                 |
|                                                                                |
|• Read missing.md                                                               |

 0 0..1 fg=LightMagenta bg=#282C3A mod=BOLD
 0 1..15 fg=#E9ECF2 bg=#282C3A mod=BOLD
 0 15..16 bg=#282C3A
 2 0..2 fg=Red mod=BOLD
 2 2..6 mod=BOLD
